# snaily-lib

./: CMakeLists.txt  LICENSE  README.md
src/: CMakeLists.txt  dummy.cpp
src/test/: CMakeLists.txt  dummy_test.cpp
